server contest manage

--- a/CenaPlus.Judge/CenaPlus.Judge.csproj
+++ b/CenaPlus.Judge/CenaPlus.Judge.csproj
@@ -36,10 +36,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Compiler.cs" />
-    <Compile Include="Resources.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runner.cs" />
     <Compile Include="Validator.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CenaPlus.Entity\CenaPlus.Entity.csproj">
+      <Project>{33fe9792-c912-42e1-994f-e920f724230b}</Project>
+      <Name>CenaPlus.Entity</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
