--- a/CenaPlus.Server/CenaPlus.Server.csproj
+++ b/CenaPlus.Server/CenaPlus.Server.csproj
@@ -109,6 +109,18 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="ServerMode\Contest\ProblemList.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ServerMode\Contest\Problem\Content.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ServerMode\Contest\Problem\Problem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ServerMode\CreateAUser.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -154,6 +166,15 @@
     </Compile>
     <Compile Include="ServerMode\Contest\General.xaml.cs">
       <DependentUpon>General.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ServerMode\Contest\ProblemList.xaml.cs">
+      <DependentUpon>ProblemList.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ServerMode\Contest\Problem\Content.xaml.cs">
+      <DependentUpon>Content.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ServerMode\Contest\Problem\Problem.xaml.cs">
+      <DependentUpon>Problem.xaml</DependentUpon>
     </Compile>
     <Compile Include="ServerMode\CreateAUser.xaml.cs">
       <DependentUpon>CreateAUser.xaml</DependentUpon>
