--- a/CenaPlus.Network/CenaPlus.Network.csproj
+++ b/CenaPlus.Network/CenaPlus.Network.csproj
@@ -48,6 +48,7 @@
     <Compile Include="ICenaPlusServerCallbak.cs" />
     <Compile Include="NotFoundError.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidationError.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CenaPlus.Entity\CenaPlus.Entity.csproj">
