--- a/CenaPlus.Entity/CenaPlus.Entity.csproj
+++ b/CenaPlus.Entity/CenaPlus.Entity.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question.cs" />
     <Compile Include="Record.cs" />
+    <Compile Include="TestCase.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
