--- a/CenaPlus.Entity/CenaPlus.Entity.csproj
+++ b/CenaPlus.Entity/CenaPlus.Entity.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="Contest.cs" />
     <Compile Include="Problem.cs" />
+    <Compile Include="ProgrammingLanguage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question.cs" />
     <Compile Include="Record.cs" />
