--- a/TestNetwork/App.config
+++ b/TestNetwork/App.config
@@ -14,4 +14,18 @@
       <add name="MySql Data Provider" invariant="MySql.Data.MySQLClient" description=".Net Framework Data Provider for MySql" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data" />
     </DbProviderFactories>
   </system.data>
+<system.serviceModel>
+        <bindings>
+            <netTcpBinding>
+                <binding name="NetTcpBinding_ICenaPlusServer">
+                    <security mode="None" />
+                </binding>
+            </netTcpBinding>
+        </bindings>
+        <client>
+            <endpoint address="net.tcp://localhost:9980/CenaPlusServer" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_ICenaPlusServer" contract="ServiceReference1.ICenaPlusServer"
+                name="NetTcpBinding_ICenaPlusServer" />
+        </client>
+    </system.serviceModel>
 </configuration>
