--- a/CenaPlus.Entity/CenaPlus.Entity.csproj
+++ b/CenaPlus.Entity/CenaPlus.Entity.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question.cs" />
     <Compile Include="Record.cs" />
+    <Compile Include="Task.cs" />
     <Compile Include="TestCase.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
