--- a/CenaPlus.Cloud.Web/CenaPlus.Cloud.Web.csproj
+++ b/CenaPlus.Cloud.Web/CenaPlus.Cloud.Web.csproj
@@ -63,6 +63,7 @@
     <Content Include="images\Logo.png" />
     <Content Include="js\CenaPlus.js" />
     <Content Include="js\JQuery.js" />
+    <Content Include="Store.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -80,6 +81,13 @@
     </Compile>
     <Compile Include="Site.Master.designer.cs">
       <DependentUpon>Site.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Store.aspx.cs">
+      <DependentUpon>Store.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Store.aspx.designer.cs">
+      <DependentUpon>Store.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
