--- a/CenaPlus.Judge/CenaPlus.Judge.csproj
+++ b/CenaPlus.Judge/CenaPlus.Judge.csproj
@@ -33,11 +33,13 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Compiler.cs" />
     <Compile Include="Identity.cs" />
+    <Compile Include="ProcessTreeKiller.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runner.cs" />
     <Compile Include="SpecialJudge.cs" />
