--- a/CenaPlus.Server/CenaPlus.Server.csproj
+++ b/CenaPlus.Server/CenaPlus.Server.csproj
@@ -93,8 +93,10 @@
     <Compile Include="Bll\ConfigKey.cs" />
     <Compile Include="Bll\ContestManager.cs" />
     <Compile Include="Bll\FakeSystemUser.cs" />
+    <Compile Include="Bll\JudgeNode.cs" />
     <Compile Include="Bll\LocalCenaServer.cs" />
     <Compile Include="Bll\ServerCallback.cs" />
+    <Compile Include="Bll\ServiceBroadcaster.cs" />
     <Compile Include="Dal\DB.cs" />
     <Compile Include="JudgeNode\Status.xaml.cs">
       <DependentUpon>Status.xaml</DependentUpon>
