--- a/CenaPlus.Server/CenaPlus.Server.csproj
+++ b/CenaPlus.Server/CenaPlus.Server.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Bll\ServerCallback.cs" />
     <Compile Include="Bll\ServiceBroadcaster.cs" />
     <Compile Include="Dal\DB.cs" />
+    <Compile Include="Dal\RecordHelper.cs" />
     <Compile Include="JudgeNode\Home.xaml.cs">
       <DependentUpon>Home.xaml</DependentUpon>
     </Compile>
