--- a/CenaPlus.Entity/CenaPlus.Entity.csproj
+++ b/CenaPlus.Entity/CenaPlus.Entity.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="Config.cs" />
     <Compile Include="Contest.cs" />
+    <Compile Include="ProblemGeneral.cs" />
     <Compile Include="ProblemStatistics.cs" />
     <Compile Include="Hack.cs" />
     <Compile Include="PrintRequest.cs" />
