--- a/CenaPlus.Client/CenaPlus.Client.csproj
+++ b/CenaPlus.Client/CenaPlus.Client.csproj
@@ -172,6 +172,7 @@
       <SubType>Designer</SubType>
     </Page>
     <Compile Include="Bll\ServerCallback.cs" />
+    <Compile Include="Bll\StandingsCache.cs" />
     <Compile Include="Local\Configuration.xaml.cs">
       <DependentUpon>Configuration.xaml</DependentUpon>
     </Compile>
